--- a/444tenFB/444tenFB/Info.plist
+++ b/444tenFB/444tenFB/Info.plist
@@ -20,6 +20,19 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb638013026335767</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>638013026335767</string>
+	<key>FacebookDisplayName</key>
+	<string>444ten</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
